# peopleos-master

./: .dockerignore  .env.example  .gitignore  DEPLOY-RAILWAY.md  README.md  docker-compose.yml  package.json  peopleos_master_prompt.md  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/api/: Dockerfile  README.md  docker-entrypoint.sh  package.json  tsconfig.json
apps/api/src/: app.ts  db.ts  env.ts  server.ts  worker.ts
apps/api/src/jobs/: retentionPurge.ts  workflowTick.ts
apps/api/src/lib/: aiClient.ts  analytics.ts  assistantTools.ts  attritionFeatures.ts  attritionScores.ts  audit.ts  chatMemory.ts  errors.ts  internalSecret.ts  mobilityMatch.ts  orgContext.ts  retrieval.ts  serialize.ts  skillGraph.ts  transcriptStore.ts  workflowEngine.ts
apps/api/src/plugins/: auth.ts  swagger.ts  tenancy.ts
apps/api/src/queue/: connection.ts  rankingQueue.ts
apps/api/src/routes/: analytics.ts  applications.ts  assistant.ts  attrition.ts  audit.ts  candidates.ts  copilot.ts  health.ts  hrChat.ts  internal.ts  internalAssistant.ts  interviews.ts  jobs.ts  mobility.ts  policies.ts  rankings.ts  skills.ts  workflow.ts
apps/api/src/services/: ranking.ts
apps/api/test/: assistantTools.test.ts  workflowEngine.test.ts
apps/extension/: .gitignore  README.md  eslint.config.js  manifest.config.ts  package.json  tsconfig.json  vite.config.ts
apps/extension/src/: api.ts
apps/extension/src/background/: index.ts
apps/extension/src/content/: index.ts  scrape.ts
apps/extension/src/lib/: messages.ts  settings.ts
apps/extension/src/options/: Options.tsx  index.html  main.tsx
apps/extension/src/sidepanel/: App.tsx  index.html  main.tsx  styles.css
apps/web/: Dockerfile  README.md  middleware.ts  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/app/analytics/: analytics-dashboard.tsx  page.tsx
apps/web/app/assistant/: assistant-console.tsx  page.tsx
apps/web/app/attrition/: attrition-dashboard.tsx  page.tsx
apps/web/app/hr-chat/: hr-chat-conversation.tsx  page.tsx
apps/web/app/interviews/: page.tsx
apps/web/app/jobs/: page.tsx
apps/web/app/mobility/: mobility-board.tsx  page.tsx
apps/web/app/policies/: page.tsx  policies-manager.tsx
apps/web/app/settings/: page.tsx  settings-view.tsx
apps/web/app/workflows/: page.tsx  workflow-templates.tsx
apps/web/components/analytics/: ask-your-data.tsx  chart-spec-view.tsx  funnel-chart.tsx  headcount-bars.tsx  kpi-tile.tsx  narrative-panel.tsx  pending-section.tsx  span-of-control-table.tsx
apps/web/components/assistant/: assistant-provider.tsx  assistant-thread.tsx  message-bubble.tsx  session-list.tsx  suggested-actions.tsx  tool-trace.tsx
apps/web/components/attrition/: attrition-heatmap.tsx  bias-audit-panel.tsx  driver-list.tsx  flight-risk-list.tsx  opt-out-toggle.tsx  risk-tier-badge.tsx
apps/web/components/copilot/: chat-message.tsx  (+4 more)
apps/web/lib/: api.ts  utils.ts
apps/web/types/: tailwindcss-animate.d.ts
docs/qa/: module-10-agentic-assistant-test-plan.md
infra/postgres/init/: 01-init.sql
prisma/: rls.sql  schema.prisma  seed.ts
services/ai/: Dockerfile  README.md  pyproject.toml
services/ai/app/: __init__.py  bias.py  config.py  embeddings.py  llm.py  main.py  schemas.py  validation.py
services/ai/app/analytics/: __init__.py  ask.py  metrics_access.py  narrative.py
services/ai/app/assistant/: __init__.py  agent.py  suggestions.py  tools.py
services/ai/app/attrition/: __init__.py  explain.py  scorer.py
services/ai/app/audit/: __init__.py  disparity.py
services/ai/app/copilot/: __init__.py  chat_agent.py  inclusive_language.py  jd_writer.py  linkedin.py  outreach.py  tools.py
services/ai/app/evals/: __init__.py  gate.py  golden_module1.json  metrics.py  run_evals.py
services/ai/app/interview/: __init__.py  analyze.py  transcribe.py
services/ai/app/knowledge/: __init__.py  chat.py  embeddings.py  pipeline.py  tokens.py
services/ai/app/mobility/: __init__.py  recommend.py
services/ai/app/modules/: __init__.py  resume_ranker.py
services/ai/app/pipelines/: __init__.py  jd_parse.py  resume_parse.py
services/ai/app/prompts/: __init__.py  analytics_ask.py  analytics_narrative.py  assistant.py  attrition_explain.py  build_vs_buy.py  candidate_summary.py  growth_path.py  holistic_assessment.py  hr_chat.py  interview_analyze.py  jd_parse.py  jd_writer.py  linkedin.py  mobility_recommend.py  outreach.py  workflow_draft.py
services/ai/app/scoring/: __init__.py  exp_relevance.py  skill_match.py  synonyms.py  yoe.py
services/ai/app/skills/: __init__.py  build_vs_buy.py  growth_path.py
services/ai/app/workflows/: __init__.py  draft.py
services/ai/tests/: test_analytics.py  test_assistant.py  test_attrition.py  test_copilot.py  test_disparity.py  test_evals.py  test_interview.py  test_knowledge.py  test_mobility.py  test_ranker.py  test_skills.py  test_workflows.py
(+61 files in other folders)
